rust/err.txt
    Checking devkit-core v0.1.0 (D:\Xpotato-apps\xpotato-devkit\rust\crates\devkit-core)
    Checking ignore v0.4.25
    Checking devkit-tree v0.1.0 (D:\Xpotato-apps\xpotato-devkit\rust\crates\devkit-tree)
    Checking devkit-cli v0.1.0 (D:\Xpotato-apps\xpotato-devkit\rust\crates\devkit-cli)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `devkit_core`
   --> crates\devkit-cli\src\main.rs:131:38
    |
131 |             let extra_ignore = match devkit_core::load_config(&root) {
    |                                      ^^^^^^^^^^^ use of unresolved module or unlinked crate `devkit_core`
    |
help: there is a crate or module with a similar name
    |
131 -             let extra_ignore = match devkit_core::load_config(&root) {
131 +             let extra_ignore = match devkit_tree::load_config(&root) {
    |

For more information about this error, try `rustc --explain E0433`.
error: could not compile `devkit-cli` (bin "devkit-cli") due to 1 previous error
